add catalina options