@@ -8,5 +8,6 @@ cp /usr/local/VIVO/VIVO/runtime.properties /usr/local/VIVO/home/config/
 cp /usr/local/VIVO/VIVO/applicationSetup.n3 /usr/local/VIVO/home/config/
 cd /usr/local/tomcat/webapps
 ln -s /usr/local/VIVO/webapps/vivo ROOT
+echo "export CATALINA_OPTS="'"-Xms8192m -Xmx8192m -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/VIVO"'"" > /usr/local/tomcat/bin/setenv.sh
 catalina.sh run
 
